@@ -118,24 +118,26 @@ class GameEngineTest {
     game.getPlayers().get(3).setTeam(TeamNames.CONTRA);
     game.getPlayers().get(3).setScore(30);
 
+
     assertThat(game.findWinningTeam()).isEqualTo(CONTRA);
   }
 
   @Test
   void distributeTeamsTest() {
     final var game = new Game();
-    final var player1 = new Player("player1", 0, 0);
-    final var player2 = new Player("player2", 0, 1);
-    final var player3 = new Player("player3", 0, 2);
-    final var player4 = new Player("player4", 0, 3);
-    final List<Player> players = List.of(player1, player2, player3, player4);
-    player1.getHand().add(new Card(CardSymbols.QUEEN, CardColours.TRUMP, 21, "CQ", 3));
-    player2.getHand().add(new Card(CardSymbols.QUEEN, CardColours.TRUMP, 21, "CQ", 3));
-    game.distributeTeams(players);
-    assertThat(player1.getTeam()).isEqualTo(RE);
-    assertThat(player2.getTeam()).isEqualTo(RE);
-    assertThat(player3.getTeam()).isEqualTo(CONTRA);
-    assertThat(player4.getTeam()).isEqualTo(CONTRA);
+    game.addPlayer("Simon");
+    game.addPlayer("Stefan");
+    game.addPlayer("Laura");
+    game.addPlayer("Leo");
+
+    game.getPlayers().getFirst().getHand().add(new Card(CardSymbols.QUEEN, CardColours.TRUMP, 21, "CQ", 3));
+    game.getPlayers().get(1).getHand().add(new Card(CardSymbols.QUEEN, CardColours.TRUMP, 21, "CQ", 3));
+    game.distributeTeams();
+
+    assertThat(game.getPlayers().getFirst().getTeam()).isEqualTo(RE);
+    assertThat(game.getPlayers().get(1).getTeam()).isEqualTo(RE);
+    assertThat(game.getPlayers().get(2).getTeam()).isEqualTo(CONTRA);
+    assertThat(game.getPlayers().get(3).getTeam()).isEqualTo(CONTRA);
   }
 
   @Test
@@ -201,6 +203,13 @@ class GameEngineTest {
 
     game.setStartPlayer(game.getPlayers().getFirst());
 
+    game.ansagen(game.getPlayers().getFirst());
+
+    game.getPlayers().getFirst().setTeam(RE);
+    game.getPlayers().get(1).setTeam(RE);
+    game.getPlayers().get(2).setTeam(CONTRA);
+    game.getPlayers().get(3).setTeam(CONTRA);
+
     game.getPlayers().get(0).addToHand(List.of(new Card(CardSymbols.NINE, CardColours.HEARTS, 0, "C9", 0)));
     game.getPlayers().get(1).addToHand(List.of(new Card(CardSymbols.NINE, CardColours.HEARTS, 0, "CQ", 0)));
     game.getPlayers().get(2).addToHand(List.of(new Card(CardSymbols.QUEEN, CardColours.TRUMP, 21, "H9", 3)));
@@ -231,19 +240,26 @@ class GameEngineTest {
 
     assertSoftly(softAssertions -> {
       assertThat(game.getPlayers().getFirst().getScore()).isEqualTo(14);
-      assertThat(game.getPlayers().get(0).getCardsWon()).hasSize(4);
-      assertThat(game.getPlayers().get(0).getHand()).isEmpty();
+      assertThat(game.getPlayers().getFirst().getCardsWon()).hasSize(4);
+      assertThat(game.getPlayers().getFirst().getHand()).isEmpty();
+      assertThat(game.getPlayers().getFirst().getPoints()).isEqualTo(8);
+
       assertThat(game.getPlayers().get(1).getScore()).isZero();
       assertThat(game.getPlayers().get(1).getCardsWon()).isEmpty();
       assertThat(game.getPlayers().get(1).getHand()).isEmpty();
+      assertThat(game.getPlayers().get(1).getPoints()).isEqualTo(8);
+
       assertThat(game.getPlayers().get(2).getScore()).isEqualTo(3);
       assertThat(game.getPlayers().get(2).getCardsWon()).hasSize(4);
       assertThat(game.getPlayers().get(2).getHand()).isEmpty();
+      assertThat(game.getPlayers().get(2).getPoints()).isEqualTo(4);
+
       assertThat(game.getPlayers().get(3).getScore()).isZero();
       assertThat(game.getPlayers().get(3).getCardsWon()).isEmpty();
       assertThat(game.getPlayers().get(3).getHand()).isEmpty();
+      assertThat(game.getPlayers().get(3).getPoints()).isEqualTo(4);
 
-      assertThat(game.findWinningTeam()).isEqualTo(CONTRA);
+      assertThat(game.findWinningTeam()).isEqualTo(RE);
     });
   }
 }
